Correction bug de chargement des collapses

--- a/kasa/src/components/Collapse/Collapse.scss
+++ b/kasa/src/components/Collapse/Collapse.scss
@@ -1,6 +1,6 @@
 // Variable
 $resolution: 1200px;
-$animation-duration: 0.5s;
+$animation-duration: 0.3s;
 
 // Keyframes
 @keyframes rotation-gauche {
